typescript/checker/tests/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty3.ts.stderr
error: TS2585 {
    span: Span {
        lo: BytePos(
            40,
        ),
        hi: BytePos(
            46,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty3.ts:3:6
  |
3 |     [Symbol.unscopables](): string;
  |      ^^^^^^

